# bevy_rhythm

./: Cargo.toml
assets/songs/: map.toml  test.toml
src/: arrow.rs  audio.rs  consts.rs  main.rs  map_maker.rs  menu.rs  score.rs  time.rs  types.rs  ui.rs
src/shaders/: background.rs  mod.rs
